--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,8 @@ PyMuPDF
 python-Levenshtein
 fuzzywuzzy
 python-dotenv
-pymongo[srv,tls]
-certifi>=2023.7.22
-dnspython>=2.4.2
+pymongo==4.5.0
+certifi==2023.7.22
+dnspython==2.4.2
 opencv-python-headless
 numpy
-urllib3>=2.0.7
