--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,5 +1,5 @@
 [mongodb]
-username = "pusp_msme_app2"
-password = "your_new_password"
+username = "puspendersharma"
+password = "unionbank"
 cluster = "msme-loan-app.a0gwq"
 database = "msme_loan_db"
