--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,5 +1,5 @@
 [mongodb]
-username = "puspendersharma"
+username = "puspmsme2"
 password = "unionbank"
 cluster = "msme-loan-app.a0gwq"
 database = "msme_loan_db"
