--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,5 +1,1 @@
-[mongodb]
-username = "puspmsme2"
-password = "unionbank"
-cluster = "msme-loan-app.a0gwq"
-database = "msme_loan_db"
+MONGODB_URI = "mongodb+srv://puspendersharma:unionbank@msme-loan-app.a0gwq.mongodb.net/msme_loan_db?retryWrites=true&w=majority"
